--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div id="enviar">
                 <input id="validarBtn" type="button" value="Cadastrar">
             </div>
-            
+            <p id="copy">&copy;BrunoPiovan</p>
         </div>
     </div>
     <div class="listagem">
