validacao do campo senha

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <p id="resultadoemail" class="error"></p>
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha" name="senha" placeholder="Digite uma senha" required>
+                <p id="resultadosen" class="error"></p>
                 <label for="telefone">Telefone:</label>
                 <input type="tel" id="telefone" name="telefone" placeholder="(00) 00000-0000" required pattern="\(\d{2}\) \d{5}-\d{4}">
                 <p id="resultadotel" class="error"></p>
