--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <h1>Cadastre-se</h1>
             <div id="campo">
                 <label for="nome">Nome Completo:</label>
-                <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" required>
+                <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" required minlength="5">
+                <p id="resultadonome" class="error"></p>
                 <label for="cpf">CPF:</label>
                 <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" maxlength="14" required>
                 <p id="resultadocpf" class="error"></p>
                 <label for="email">Email:</label>
-                <input type="email" placeholder="Endereço de E-mail" autocomplete="email" required maxlength="50" >
+                <input type="email" id="email" placeholder="Endereço de E-mail" autocomplete="email" required maxlength="50" >
                 <p id="resultadoemail" class="error"></p>
                 <label for="senha">Senha:</label>
                 <input type="password" id="senha" name="senha" placeholder="Digite uma senha" required>
